# InSitu-Vis-Tutorial

./: .gitmodules  README.md
.github/workflows/: deploy.yaml
AscentIntro/cpp/: 01_first_light_rendering.md  04_ascent_scene.md  05_ascent_pipeline.md  06_ascent_extract.md  07_ascent_query.md  08_ascent_trigger.md  09_ascent_binning.md
Examples/: pvReadBlueprintRootFile.py
Examples/DoubleGyre/C++/: CompileOnLaptop.sh  double_gyre_ascent.cxx  double_gyre_ascent.h  double_gyre_catalyst.cxx  main.cxx  save_images_actions.yaml
Examples/DoubleGyre/Python/: double_gyre_ascent.py  double_gyre_catalyst.py  pvDoubleGyre.py  save_images_actions.yaml
Examples/DummySPH/: ascent_binning.md  ascent_histsampling.md  ascent_rendering.md  ascent_thresholding.md
Examples/HeatDiffusion/C++/: AscentAdaptor.h  CMakeLists.txt  HowToRun.txt  catalyst_state.py  cleanup.sh  run_catalyst.sh
Examples/HeatDiffusion/C++/datasets/: ascent_session.yaml  temperature010000.vtpd
Examples/HeatDiffusion/C++/datasets/temperature010000/: temperature010000_0.vti  temperature010000_1.vti  temperature010000_2.vti  temperature010000_3.vti
Examples/HeatDiffusion/InTransit/: HowToBuild-InTransit.sh  HowToRun-InTransit.sh  fides-sst-reader.cpp  heat_diffusion_insitu_serial.py
Examples/HeatDiffusion/Python/: CMakeLists.txt  HowToBuild-InTransit.sh  HowToRun-InTransit-Local.txt  adios2.xml  cleanup.sh  fides-sst-reader.cpp  heat_diffusion_insitu_parallel.py  intransit.sh
Examples/cloverleaf3d/: Makefile  readme.md
Examples/kripke/: CMakeLists.txt  readme.md
Examples/noise/: CMakeLists.txt  readme.md
Examples/unit_tests/: readme.md
Examples/unit_tests/alps/ascent.git/src/tests/: t_config.hpp
Examples/unit_tests/alps/ascent.git/src/tests/ascent/: CMakeLists.txt  expressions  runtimes  t_ascent_gpu_data_source.cpp
Examples/unit_tests/alps/ascent.git/src/tests/ascent/cmake/: setup_GTest.cmake
slides/src/: LICENSE  README.md
slides/src/202512/: components  node_modules  package.json  pnpm-lock.yaml  slides.md  slidev-theme-cscs  snippets
slides/src/202512/md/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  dummysph.md  heatdiffusion.md
slides/src/install/: package.json  slidev-theme-cscs.git
